# django-official-tutorial-4.2

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
src/core/: asgi.py  settings.py  wsgi.py
src/polls/: models.py  views.py
src/polls/templates/polls/: detail.html
